TypedLama/regression/compile_error/test004.3.lama
-- check that logical value should be TConst
fun p(i :: Int) :: Str {
  i.string
}
for i := 0, p(i), i := i+1
do
    local nop = 0;
od